# KaossEffect

./: README.md
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt
app/src/main/cpp/effects/: Glitch.cpp  Glitch.h  Phaser.cpp  Phaser.h  Reverb.cpp  Reverb.h  RingMod.cpp  RingMod.h
app/src/main/java/com/example/kaosseffect/ui/components/: EffectModeSelector.kt  XYPad.kt
